# reaction

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: buiild.yml  build.yml  cmake-single-platform.yml
reaction/src/core/: core.c  fat32.h
reaction/src/core/test/: test.c
src/: button.c  button.h  components.c  components.h  dropbox.c  dropbox.h  label.c  label.h  main.c  main.cc  main.h  main.hpp  mainWindow.hpp  panel.c  panel.h
src/cmd/: CMakeLists.txt  cmd.c  format.c  main.c
src/cmd/include/: cmd.h  macro.h
src/cmd/sys/include/: status.h
src/common/: context.cc  process.cc  signal.cc
src/common/include/: context.hpp  message.h  message.hpp  process.hpp  signal.hpp  state.hpp
src/core/: common.h  core.c  core.h  fat32.c  fat32.h  format.c  format.h
src/core/cmd/: CMakeLists.txt  format.c  format.h  main.c
src/core/cmd/include/: context.h
src/core/include/: context.h  core.h  fat32.h
src/core/test/: CMakeLists.txt  test.c
src/gui/: dropbox.cc  init.cc  init.hpp  label.cc  window.cc
src/gui/include/: buttons.hpp  dropbox.hpp  label.hpp
src/utils/: utils.cc  utils.hpp
